--- a/Shop wide.html
+++ b/Shop wide.html
@@ -15,6 +15,7 @@
 
     <!-- HEADER -->
 
+    
     <div class="covid">
         <p>Due to the <span>COVID 19</span> epidemic, orders may be processed with a slight delay</p>
     </div>
@@ -139,9 +140,14 @@
 
                     <div class="col-lg-2">
                         <div class="hcright">
-                            <a id="profil" href="./Login.html"><i class="fa-solid fa-user"></i></a>
-                            <span>$0.00</span>
-                            <a id="basket" href=""><i class="fa-solid fa-basket-shopping"></i></a>
+                            <div class="profilheader">
+                                <a id="profil" href="./Login.html"><i class="fa-solid fa-user"></i></a>
+                            </div>
+                            <div class="basketsection">
+                                <span id="countproduct">0</span>
+                                <span id="basketprice">$0.00</span>
+                                <a id="basket" href="./basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                            </div>
                         </div>
                     </div>
 
@@ -697,7 +703,7 @@
 
                 <div class="col-4">
                     <div class="mhright">
-                        <span>$0.00</span>
+                        <span id="mobileheaderprice">$0.00</span>
                         <a id="basket" href=""><i class="fa-solid fa-basket-shopping"></i></a>
                     </div>
                 </div>
@@ -1219,7 +1225,7 @@
                         <ul>
                             <li><a href="">Home 1</a></li>
                             <li><a href="">Home 2</a></li>
-                            <li><a href="">Home 3</a></li>
+                            <li><a href="./Index.html">Home 3</a></li>
                             <li><a href="">Home 4</a></li>
                             <li><a href="">Home 5</a></li>
                         </ul>
@@ -1241,11 +1247,11 @@
 
                     <div class="sbfShop">
                         <ul>
-                            <li><a href="">Shop List</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
+                            <li><a href="./Shop wide.html">Shope Wide</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./Login.html">Profil</a></li>
+                            <li><a href="./productdetails.html">Product Details</a></li>
+                            <li><a href="./basket.html">Basket</a></li>
                         </ul>
                     </div>
                 </li>
