--- a/Index.html
+++ b/Index.html
@@ -707,7 +707,7 @@
                 <div class="col-4">
                     <div class="mhright">
                         <span id="mobileheaderprice">$0.00</span>
-                        <a id="basket" href=""><i class="fa-solid fa-basket-shopping"></i></a>
+                        <a id="basket" href="./basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                     </div>
                 </div>
 
